file paths update

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Vijay Deepak</title>
-    <link rel="icon" href="/img/icon/vjsd-black.png" />
+    <link rel="icon" href="./img/icon/vjsd-black.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Quicksand"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/font/flaticon.css" />
-    <link rel="stylesheet" href="/css/lib/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <script src="/js/lib/jquery.min.js"></script>
-    <script src="/js/lib/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./css/font/flaticon.css" />
+    <link rel="stylesheet" href="./css/lib/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/lib/jquery.min.js"></script>
+    <script src="./js/lib/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="container-fluid">
