file paths update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         >
           <div class="profile-block">
             <img
-              src="/img/profile-pic.jpg"
+              src="./img/profile-pic.jpg"
               class="rounded-circle profile-pic"
               alt="Profile Picture"
             />
