--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="./css/font/flaticon.css" />
     <link rel="stylesheet" href="./css/lib/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/custom-bootstrap.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/lib/jquery.min.js"></script>
     <script src="./js/lib/bootstrap.min.js"></script>
@@ -91,9 +92,10 @@
               troubleshooter. Successful in intense and demanding environments,
               providing decisive team leadership and structure with a track
               record of motivating and developing soldiers. Willing to relocate.
+              Interested in working on fields like
             </p>
-            <div class="row pb-4">
-              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+            <div class="row py-4 card-md-lg-plr">
+              <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                 <div class="tech-card web">
                   <i class="flaticon-code"></i>
                   <p class="card-desc">
@@ -101,7 +103,7 @@
                   </p>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+              <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                 <div class="tech-card database">
                   <i class="flaticon-database"></i>
                   <p class="card-desc">
@@ -109,7 +111,7 @@
                   </p>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+              <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                 <div class="tech-card mobile">
                   <i class="flaticon-smartphone"></i>
                   <p class="card-desc">
