updated service section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <link rel="stylesheet" href="./css/font/flaticon.css" />
     <link rel="stylesheet" href="./css/lib/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/custom-bootstrap.css" />
+    <link rel="stylesheet" href="./css/home.css" />
+    <link rel="stylesheet" href="./css/about.css" />
+    <link rel="stylesheet" href="./css/service-section.css" />
     <link rel="stylesheet" href="./css/style.css" />
+
     <script src="./js/lib/jquery.min.js"></script>
     <script src="./js/lib/bootstrap.min.js"></script>
   </head>
@@ -64,12 +68,34 @@
           <div class="footer">
             <p class="copy-rights" id="copy-rights"></p>
             <div class="professional-accounts">
-              <a href="https://www.linkedin.com/in/vijay-deepak-17276bb3/" target="_blank" class="no-underline">
+              <a
+                href="https://www.linkedin.com/in/vijay-deepak-17276bb3/"
+                target="_blank"
+                class="no-underline"
+                title="Linked IN"
+              >
                 <i class="flaticon-linkedin"></i>
               </a>
-              <a href="https://github.com/Prince7195" target="_blank" class="no-underline">
-                  <i class="flaticon-github-logo"></i>
-                </a>
+              <a
+                href="https://github.com/Prince7195"
+                target="_blank"
+                class="no-underline"
+                title="GitHub"
+              >
+                <i class="flaticon-github-logo"></i>
+              </a>
+              <a
+                href="https://www.npmjs.com/~vijay7195"
+                target="_blank"
+                class="no-underline"
+                title="NPM"
+              >
+                <img
+                  src="./img/project/Npm-logo.svg"
+                  class="npm-logo"
+                  alt="npm"
+                />
+              </a>
             </div>
           </div>
         </div>
@@ -88,7 +114,7 @@
             </p>
             <p class="about-desc">
               Highly skilled and results-oriented professional. Proven ability
-              to assess and manage complex obstacles; viewed as a strong
+              to assess and manage complex obstacles, viewed as a strong
               troubleshooter. Successful in intense and demanding environments,
               providing decisive team leadership and structure with a track
               record of motivating and developing soldiers. Willing to relocate.
@@ -124,15 +150,151 @@
               <div class="card bg-success">
                 <div class="card-body text-center">
                   <p class="card-text about-project-desc">
-                    I am happy to know you that 3 projects done successfully in
-                    2.5 years!
+                    I am happy to know you that 4 projects done successfully in
+                    2.8 years!
                   </p>
                 </div>
               </div>
             </div>
           </section>
-          <section id="service"></section>
-          <section id="skills"></section>
+          <section id="service">
+            <h5 class="sub-heading">WHAT I DO?</h5>
+            <h3 class="heading">HERE ARE SOME OF MY EXPERTISE</h3>
+            <div class="container-fluid">
+              <div class="row py-4 card-md-lg-plr">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                  <div class="descriptive-card">
+                    <div class="html"></div>
+                    <div class="descriptive-card-text">
+                      <h4>
+                        <b>HTML</b><span class="sub-desc">(2.5 years)</span>
+                      </h4>
+                      <p>
+                        Worked in basic HTML along with my Sharepoint and React
+                        projects
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                  <div class="descriptive-card">
+                    <div class="css"></div>
+                    <div class="descriptive-card-text">
+                      <h4>
+                        <b>CSS</b><span class="sub-desc">(2.5 years)</span>
+                      </h4>
+                      <p>
+                        Worked in basic CSS along with my Sharepoint and React
+                        projects
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                  <div class="descriptive-card">
+                    <div class="js"></div>
+                    <div class="descriptive-card-text">
+                      <h4>
+                        <b>Java Script</b
+                        ><span class="sub-desc">(2.5 years)</span>
+                      </h4>
+                      <p>
+                        Worked with basic javascript for UI functionality in
+                        Sharepoint and for Data visualization with D3 for small
+                        graph modules and also with multiple Js libraries and
+                        framework.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row py-4 card-md-lg-plr">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                  <div class="descriptive-card">
+                    <div class="reactjs"></div>
+                    <div class="descriptive-card-text">
+                      <h4>
+                        <b>Reactjs</b><span class="sub-desc">(1.5 years)</span>
+                      </h4>
+                      <p>
+                        Have a good experience of react with my two projects
+                        with two different customized client based libraries
+                        including with redux state management library and some
+                        react libraries.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                  <div class="descriptive-card">
+                    <div class="csharp"></div>
+                    <div class="descriptive-card-text">
+                      <h4>
+                        <b>C#</b><span class="sub-desc">(0.3 years)</span>
+                      </h4>
+                      <p>
+                        Have a less experience with c# in my second reactjs
+                        project. Learned to write an API in C#.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                  <div class="descriptive-card">
+                    <div class="sql"></div>
+                    <div class="descriptive-card-text">
+                      <h4>
+                        <b>Sql</b><span class="sub-desc">(0.3 years)</span>
+                      </h4>
+                      <p>
+                        Learned basic sql commands in my second reactjs project.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row py-4 card-md-lg-plr">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                  <div class="descriptive-card">
+                    <div class="sharepoint"></div>
+                    <div class="descriptive-card-text">
+                      <h4>
+                        <b>Sharepoint</b
+                        ><span class="sub-desc">(0.10 years)</span>
+                      </h4>
+                      <p>
+                        The first technology that I started my software career.
+                        Learned sharepoint to work in on premisses. I have done
+                        two projects with Sharepoint technology, along with
+                        sharepoint I got an opportunity to nintex which handles
+                        the entire workflow in backend.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="project-client">
+                  <div class="project-client-desc">
+                    <div class="project">
+                        <h4>4</h4>
+                        <p>Projects</p>
+                    </div>
+                    <div class="client">
+                        <h4>2</h4>
+                        <p>Clients</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+          <section id="skills">
+              <h5 class="sub-heading">MY SPECIALTY</h5>
+              <h3 class="heading">MY SKILLS</h3>
+          </section>
           <section id="education"></section>
           <section id="experience"></section>
           <section id="work"></section>
