updated skill sets

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/home.css" />
     <link rel="stylesheet" href="./css/about.css" />
     <link rel="stylesheet" href="./css/service-section.css" />
+    <link rel="stylesheet" href="./css/skills.css" />
     <link rel="stylesheet" href="./css/style.css" />
 
     <script src="./js/lib/jquery.min.js"></script>
@@ -279,12 +280,12 @@
                 <div class="project-client">
                   <div class="project-client-desc">
                     <div class="project">
-                        <h4>4</h4>
-                        <p>Projects</p>
+                      <h4>4</h4>
+                      <p>Projects</p>
                     </div>
                     <div class="client">
-                        <h4>2</h4>
-                        <p>Clients</p>
+                      <h4>2</h4>
+                      <p>Clients</p>
                     </div>
                   </div>
                 </div>
@@ -292,8 +293,110 @@
             </div>
           </section>
           <section id="skills">
-              <h5 class="sub-heading">MY SPECIALTY</h5>
-              <h3 class="heading">MY SKILLS</h3>
+            <h5 class="sub-heading">MY SPECIALTY</h5>
+            <h3 class="heading">MY SKILLS</h3>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 py-4">
+                  <div class="skills-progress-bars">
+                    HTML
+                    <div class="progress">
+                      <div class="progress-bar bg-danger" style="width:40%">
+                        40%
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 py-4">
+                  <div class="skills-progress-bars">
+                    CSS
+                    <div class="progress">
+                      <div class="progress-bar" style="width:40%">
+                        40%
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 py-4">
+                  <div class="skills-progress-bars">
+                    JavaScript
+                    <div class="progress">
+                      <div class="progress-bar bg-warning" style="width:60%">
+                        60%
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 py-4">
+                  <div class="skills-progress-bars">
+                    Sharepoint
+                    <div class="progress">
+                      <div class="progress-bar bg-sharepoint" style="width:30%">
+                        30%
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 py-4">
+                  <div class="skills-progress-bars">
+                    ReactJs
+                    <div class="progress">
+                      <div class="progress-bar bg-reactjs" style="width:60%">
+                        60%
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 py-4">
+                  <div class="skills-progress-bars">
+                    Angular
+                    <div class="progress">
+                      <div class="progress-bar bg-danger" style="width:30%">
+                        30%
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 py-4">
+                  <div class="skills-progress-bars">
+                    Ionic
+                    <div class="progress">
+                      <div class="progress-bar bg-ionic" style="width:20%">
+                        20%
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 py-4">
+                  <div class="skills-progress-bars">
+                    React Native
+                    <div class="progress">
+                      <div class="progress-bar bg-reactjs" style="width:20%">
+                        20%
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 py-4">
+                  <div class="skills-progress-bars">
+                    NodeJs
+                    <div class="progress">
+                      <div class="progress-bar bg-success" style="width:30%">
+                        30%
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </section>
           <section id="education"></section>
           <section id="experience"></section>
