updated collapseable header for education

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <link rel="stylesheet" href="./css/font/flaticon.css" />
     <link rel="stylesheet" href="./css/lib/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/custom-bootstrap.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/home.css" />
     <link rel="stylesheet" href="./css/about.css" />
     <link rel="stylesheet" href="./css/service-section.css" />
     <link rel="stylesheet" href="./css/skills.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/education.css" />    
 
     <script src="./js/lib/jquery.min.js"></script>
     <script src="./js/lib/bootstrap.min.js"></script>
@@ -311,7 +312,7 @@
                   <div class="skills-progress-bars">
                     CSS
                     <div class="progress">
-                      <div class="progress-bar" style="width:40%">
+                      <div class="progress-bar bg-css" style="width:40%">
                         40%
                       </div>
                     </div>
@@ -398,10 +399,42 @@
               </div>
             </div>
           </section>
-          <section id="education"></section>
-          <section id="experience"></section>
-          <section id="work"></section>
-          <section id="contact"></section>
+          <section id="education">
+            <h5 class="sub-heading">EDUCATION</h5>
+            <h3 class="heading">EDUCATION</h3>
+            <div class="container-fluid">
+              <div class="row pt-5">
+                <button class="education-collapsible">BACHELOR OF ENGINEERING</button>
+                <div class="education-content">
+                  <p>Lorem ipsum...</p>
+                </div>
+              </div>
+              <div class="row pt-3">
+                <button class="education-collapsible">INTERMEDIATE EDUCATION</button>
+                <div class="education-content">
+                  <p>Lorem ipsum...</p>
+                </div>
+              </div>
+              <div class="row pt-3 pb-5">
+                <button class="education-collapsible">HIGH SCHOOL SECONDARY EDUCATION</button>
+                <div class="education-content">
+                  <p>Lorem ipsum...</p>
+                </div>
+              </div>
+            </div>
+          </section>
+          <section id="experience">
+            <h5 class="sub-heading">EXPERIENCE</h5>
+            <h3 class="heading">WORK EXPERIENCE</h3>
+          </section>
+          <section id="work">
+            <h5 class="sub-heading">MY WORK</h5>
+            <h3 class="heading">RECENT WORK</h3>
+          </section>
+          <section id="contact">
+            <h5 class="sub-heading">GET IN TOUCH</h5>
+            <h3 class="heading">CONTACT</h3>
+          </section>
         </div>
         <!-- Right Side Ends -->
       </div>
