--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <link rel="stylesheet" href="./css/about.css" />
     <link rel="stylesheet" href="./css/service-section.css" />
     <link rel="stylesheet" href="./css/skills.css" />
-    <link rel="stylesheet" href="./css/education.css" />    
+    <link rel="stylesheet" href="./css/education.css" />
+    <link rel="stylesheet" href="./css/experience.css" />
+    <link rel="stylesheet" href="./css/work.css" />
+    <link rel="stylesheet" href="./css/contact.css" />
 
     <script src="./js/lib/jquery.min.js"></script>
     <script src="./js/lib/bootstrap.min.js"></script>
@@ -404,21 +407,39 @@
             <h3 class="heading">EDUCATION</h3>
             <div class="container-fluid">
               <div class="row pt-5">
-                <button class="education-collapsible">BACHELOR OF ENGINEERING</button>
+                <button class="education-collapsible active">
+                  BACHELOR OF ENGINEERING
+                </button>
                 <div class="education-content">
-                  <p>Lorem ipsum...</p>
+                  <p>
+                    Completed my Bachelor of Engineering in Electronics and
+                    Communication in Karpagam University, Coimbatore, TamilNadu
+                    in the Year of 2016 with 90%.
+                  </p>
                 </div>
               </div>
               <div class="row pt-3">
-                <button class="education-collapsible">INTERMEDIATE EDUCATION</button>
+                <button class="education-collapsible active">
+                  INTERMEDIATE EDUCATION
+                </button>
                 <div class="education-content">
-                  <p>Lorem ipsum...</p>
+                  <p>
+                    Completed my Intermediate Education in Mathematics and
+                    Science in Sri Chaitanya Jr. College, Vijayawada, Andhra
+                    Pradesh in the Year of 2012 with 89%.
+                  </p>
                 </div>
               </div>
               <div class="row pt-3 pb-5">
-                <button class="education-collapsible">HIGH SCHOOL SECONDARY EDUCATION</button>
+                <button class="education-collapsible active">
+                  HIGH SCHOOL SECONDARY EDUCATION
+                </button>
                 <div class="education-content">
-                  <p>Lorem ipsum...</p>
+                  <p>
+                    Completed my High School Secondary Education in St. Charles
+                    E.M. High School, Chilakaluripet, Andhra Pradesh in the Year
+                    of 2010 with 81%.
+                  </p>
                 </div>
               </div>
             </div>
@@ -426,6 +447,52 @@
           <section id="experience">
             <h5 class="sub-heading">EXPERIENCE</h5>
             <h3 class="heading">WORK EXPERIENCE</h3>
+            <div class="container-fluid">
+              <div class="experience">
+                <div class="experience-container experience-left">
+                  <div class="experience-content">
+                    <span class="experience-heading">Full Stack Developer <span class="experience-sub-heading">(2019)</span></span>
+                    <p class="experience-desc">
+                      <ul class="experience-desc-list">
+                        <li class="experience-desc-list-item">
+                          Working as a Full stack developer for three months with Reactjs, C# and Sql for the Appraisal based Internal Application.
+                        </li>
+                      </ul>
+                    </p>
+                  </div>
+                </div>
+                <div class="experience-container experience-right">
+                  <div class="experience-content">
+                    <span class="experience-heading">Angular and React Developer <span class="experience-sub-heading">(2017-2019)</span></span>
+                    <p class="experience-desc">
+                      <ul class="experience-desc-list">
+                        <li class="experience-desc-list-item">
+                          Worked as Angular developer for two months in Data visualization with D3 for the company Product Analance.
+                        </li>
+                        <li class="experience-desc-list-item">
+                          Worked as UI Developer for one month for the internal Application D360.
+                        </li>
+                        <li class="experience-desc-list-item">
+                          Worked as a React Developer for nearly one year in the telecommunication based E-commerce project.
+                        </li>
+                      </ul>
+                    </p>
+                  </div>
+                </div>
+                <div class="experience-container experience-left">
+                  <div class="experience-content">
+                    <span class="experience-heading">Sharepoint Developer <span class="experience-sub-heading">(2016-2017)</span></span>
+                    <p class="experience-desc">
+                      <ul class="experience-desc-list">
+                        <li class="experience-desc-list-item">
+                            Worked as Sharepoint Developer for 1o months in two projects where both are completely Approval workflow based projects. Along with Sharepoint i got an opportunity to work with Nintex, that is used to handle workflow for Sharepoint projects.
+                        </li>
+                      </ul>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </section>
           <section id="work">
             <h5 class="sub-heading">MY WORK</h5>
