updated working details

--- a/index.html
+++ b/index.html
@@ -497,6 +497,106 @@
           <section id="work">
             <h5 class="sub-heading">MY WORK</h5>
             <h3 class="heading">RECENT WORK</h3>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12 py-4">
+                    <div class="work-container bell-canada">
+                        <div class="work-project">
+                          <div class="project-title-client">
+                            <span class="project-title">
+                              OCIO
+                            </span>
+                            <div class="clearfix"></div>
+                            <span class="project-client-title">
+                              Bell Canada
+                            </span>
+                          </div>
+                        </div>
+                        <div class="work-project-details ocio">
+                          <div class="details">
+                            <div class="details-title">OCIO</div>
+                            <div class="details-description">
+                              It is a Bell Canada internal Application to handle the Appraisal for Management level people. It is an Extended functionality application to the Analance 2.0 the product of Ducen IT.
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12 py-4">
+                    <div class="work-container bell-canada">
+                        <div class="work-project">
+                            <div class="project-title-client">
+                                <span class="project-title">
+                                  Bell.ca
+                                </span>
+                                <div class="clearfix"></div>
+                                <span class="project-client-title">
+                                  Bell Canada
+                                </span>
+                              </div>
+                        </div>
+                        <div class="work-project-details bell-ca">
+                          <div class="details">
+                              <div class="details-title">Bell.ca - WSS</div>
+                              <div class="details-description">
+                                  WSS (Wireless Self serve) is a small module in Bell.ca, a communication based E-commerce application. This module contains prepaid and postpaid data recharge functionality and Mobile purchase feature for the Bell customers.
+                              </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+              </div>
+              <div class="row">
+                  <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12 py-4">
+                      <div class="work-container drl">
+                          <div class="work-project">
+                            <div class="project-title-client">
+                              <span class="project-title">
+                                WPM
+                              </span>
+                              <div class="clearfix"></div>
+                              <span class="project-client-title">
+                                Dr.Reddy's
+                              </span>
+                            </div>
+                          </div>
+                          <div class="work-project-details wpm">
+                            <div class="details">
+                                <div class="details-title">Work Permit Manager ( WPM )</div>
+                                <div class="details-description">
+                                    It is an Dr. Reddy's internal Application, to monitor the regular activities on daily bases of their employees.                                    
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+                  </div>
+                  <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12 py-4">
+                      <div class="work-container drl">
+                          <div class="work-project">
+                              <div class="project-title-client">
+                                  <span class="project-title">
+                                    UPPM
+                                  </span>
+                                  <div class="clearfix"></div>
+                                  <span class="project-client-title">
+                                    Dr.Reddy's
+                                  </span>
+                                </div>
+                          </div>
+                          <div class="work-project-details uppm">
+                            <div class="details">
+                                <div class="details-title">Ukraine Product Portfolio Management ( UPPM )</div>
+                                <div class="details-description">
+                                    It is an Application for medicine Approval process for DRL in
+                                        Ukraine. It has 9 mandatory approval processes and has 3 optional processes for design
+                                        approval processes.                                
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+                  </div>
+                </div>
+            </div>
           </section>
           <section id="contact">
             <h5 class="sub-heading">GET IN TOUCH</h5>
