--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
               <li class="nav-list-item">
                 <a href="#work">Work</a>
               </li>
-              <li class="nav-list-item">
+              <!-- <li class="nav-list-item">
                 <a href="#contact">Contact</a>
-              </li>
+              </li> -->
             </ul>
           </div>
           <div class="footer">
@@ -467,10 +467,10 @@
                     <p class="experience-desc">
                       <ul class="experience-desc-list">
                         <li class="experience-desc-list-item">
-                          Worked as Angular developer for two months in Data visualization with D3 for the company Product Analance.
+                          Worked as Angular developer for two months in Data visualization with D3 for our company Product Analance.
                         </li>
                         <li class="experience-desc-list-item">
-                          Worked as UI Developer for one month for the internal Application D360.
+                          Worked as UI Developer for one month for the internal Application.
                         </li>
                         <li class="experience-desc-list-item">
                           Worked as a React Developer for nearly one year in the telecommunication based E-commerce project.
@@ -500,7 +500,7 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12 py-4">
-                    <div class="work-container bell-canada">
+                    <div class="work-container telecom-canada">
                         <div class="work-project">
                           <div class="project-title-client">
                             <span class="project-title">
@@ -508,7 +508,7 @@
                             </span>
                             <div class="clearfix"></div>
                             <span class="project-client-title">
-                              Bell Canada
+                              Canada's Telecom Provider
                             </span>
                           </div>
                         </div>
@@ -516,30 +516,30 @@
                           <div class="details">
                             <div class="details-title">OCIO</div>
                             <div class="details-description">
-                              It is a Bell Canada internal Application to handle the Appraisal for Management level people. It is an Extended functionality application to the Analance 2.0 the product of Ducen IT.
+                              It is an internal Application to handle the Appraisal for Management level people. It is an Extended functionality application to the Analance 2.0 the product of Ducen IT.
                             </div>
                           </div>
                         </div>
                       </div>
                 </div>
                 <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12 py-4">
-                    <div class="work-container bell-canada">
+                    <div class="work-container telecom-canada">
                         <div class="work-project">
                             <div class="project-title-client">
                                 <span class="project-title">
-                                  Bell.ca
+                                  WSS
                                 </span>
                                 <div class="clearfix"></div>
                                 <span class="project-client-title">
-                                  Bell Canada
+                                  Canada's Telecom Provider
                                 </span>
                               </div>
                         </div>
-                        <div class="work-project-details bell-ca">
+                        <div class="work-project-details telecom-ca">
                           <div class="details">
-                              <div class="details-title">Bell.ca - WSS</div>
+                              <div class="details-title">WSS</div>
                               <div class="details-description">
-                                  WSS (Wireless Self serve) is a small module in Bell.ca, a communication based E-commerce application. This module contains prepaid and postpaid data recharge functionality and Mobile purchase feature for the Bell customers.
+                                  WSS (Wireless Self serve) is a small module in communication based E-commerce application. This module contains prepaid and postpaid data recharge functionality and Mobile purchase feature for their customers.
                               </div>
                           </div>
                         </div>
@@ -556,7 +556,7 @@
                               </span>
                               <div class="clearfix"></div>
                               <span class="project-client-title">
-                                Dr.Reddy's
+                                Pharmacy company
                               </span>
                             </div>
                           </div>
@@ -564,7 +564,7 @@
                             <div class="details">
                                 <div class="details-title">Work Permit Manager ( WPM )</div>
                                 <div class="details-description">
-                                    It is an Dr. Reddy's internal Application, to monitor the regular activities on daily bases of their employees.                                    
+                                    It is an internal Application of a Pharmacy company, to monitor the regular activities on daily bases of their employees.                                    
                                 </div>
                             </div>
                           </div>
@@ -579,7 +579,7 @@
                                   </span>
                                   <div class="clearfix"></div>
                                   <span class="project-client-title">
-                                    Dr.Reddy's
+                                    Pharmacy company
                                   </span>
                                 </div>
                           </div>
@@ -587,7 +587,7 @@
                             <div class="details">
                                 <div class="details-title">Ukraine Product Portfolio Management ( UPPM )</div>
                                 <div class="details-description">
-                                    It is an Application for medicine Approval process for DRL in
+                                    It is an Pharmacy company Application for medicine Approval process in
                                         Ukraine. It has 9 mandatory approval processes and has 3 optional processes for design
                                         approval processes.                                
                                 </div>
@@ -598,10 +598,10 @@
                 </div>
             </div>
           </section>
-          <section id="contact">
+          <!-- <section id="contact">
             <h5 class="sub-heading">GET IN TOUCH</h5>
             <h3 class="heading">CONTACT</h3>
-          </section>
+          </section> -->
         </div>
         <!-- Right Side Ends -->
       </div>
