--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               to assess and manage complex obstacles, viewed as a strong
               troubleshooter. Successful in intense and demanding environments,
               providing decisive team leadership and structure with a track
-              record of motivating and developing soldiers. Willing to relocate.
+              record of motivating and developing soldiers.
               Interested in working on fields like
             </p>
             <div class="row py-4 card-md-lg-plr">
